Added navbar router

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,3 +1,27 @@
 .App {
   font-family: "Helvetica";
 }
+
+.positive {
+  color: green;
+}
+
+.negative {
+  color: red;
+}
+
+.budgetTotals {
+  margin: 20px 20px 20px 0;
+}
+
+.navbar {
+  display: inline;
+}
+
+.link {
+  padding: 5;
+}
+
+.rightnav {
+  text-align: right;
+}
