--- a/frontend/src/components/UserForms/UserForms.module.scss
+++ b/frontend/src/components/UserForms/UserForms.module.scss
@@ -33,4 +33,12 @@
   width: 300px;
   height: 40px;
   font-size: 16px;
+
+  &:focus {
+    outline-style: none;
+  }
+
+  &:focus::placeholder {
+    opacity: 0.5;
+  }
 }
