--- a/frontend/src/components/BudgetForm/BudgetForm.module.scss
+++ b/frontend/src/components/BudgetForm/BudgetForm.module.scss
@@ -17,3 +17,9 @@
 .form {
   display: inline-flex;
 }
+
+.forminput {
+  border-radius: 5px;
+  border-color: #cccccc;
+  border-block-color: #cccccc;
+}
