Started spending goals component

--- a/frontend/src/components/Budget/Budget.module.scss
+++ b/frontend/src/components/Budget/Budget.module.scss
@@ -1,5 +1,6 @@
 .budgetItems {
   width: 100%;
+  margin-top: 40px;
 }
 
 .income {
@@ -12,7 +13,11 @@
   text-align: right;
 }
 
-h2 {
+.title {
+  text-align: center;
+}
+
+.currMonth {
   text-align: center;
 }
 
@@ -30,9 +35,6 @@ button {
   &:hover {
     background: #109e1a;
   }
-}
-
-.options {
 }
 
 .update {
