updated error messages

--- a/frontend/src/components/UserForms/UserForms.module.scss
+++ b/frontend/src/components/UserForms/UserForms.module.scss
@@ -48,4 +48,13 @@
   &:focus::placeholder {
     opacity: 0.2;
   }
+
+  &:invalid {
+    border-color: red;
+    box-shadow: none;
+  }
+
+  &:invalid:focus {
+    border-color: red;
+  }
 }
