--- a/frontend/src/components/SpendingGoals/SpendingGoals.module.scss
+++ b/frontend/src/components/SpendingGoals/SpendingGoals.module.scss
@@ -10,6 +10,14 @@ $goal-width: 75%;
   border-color: #cccccc;
   border-block-color: #cccccc;
   padding-left: 5px;
+
+  &:invalid {
+    box-shadow: none;
+  }
+
+  &:invalid:focus {
+    border-color: red;
+  }
 }
 
 .title {
